--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <title>Drag & Drop | Проект 2</title>
   </head>
   <body>
-    <div>
+    <>
       <div class="row">
           <div class="col-header start">Начать</div>
           <div class="col-header progress">В процессе</div>
           <div class="col-header done">Готовы</div>
       </div>
+<!--new tage is not need-->
+    <div id="pop" class="pip"></div>
+<!--new tage is not need-->
 
       <div class="row">
         <div class="placeholder">
